fix(layout): minor alignmment fix in login page

--- a/wwwroot/_layout.css
+++ b/wwwroot/_layout.css
@@ -47,7 +47,8 @@ main {
 
     .card.login {
         margin-top: 5%;
-        margin: auto;
+        margin-left: auto;
+        margin-right: auto;
         max-width: 400px;
     }
 
